--- a/src/game/windows/GameWindow.fxml
+++ b/src/game/windows/GameWindow.fxml
@@ -4,36 +4,36 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.windows.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.windows.Controller">
    <children>
-      <ImageView fx:id="AImag" fitHeight="29.0" fitWidth="36.0" layoutX="92.0" layoutY="6.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="400.0" fitWidth="408.0" layoutX="92.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="500.0" fitWidth="600.0" layoutX="60.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@TableDeJeu2.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="274.0" layoutY="6.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="AImag2" fitHeight="29.0" fitWidth="36.0" layoutX="456.0" layoutY="6.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="396.0" layoutY="186.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="212.0" layoutY="186.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="337.0" layoutY="123.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="274.0" layoutY="123.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="212.0" layoutY="123.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="396.0" layoutY="65.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="274.0" layoutY="65.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="153.0" layoutY="65.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="92.0" layoutY="364.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="274.0" layoutY="364.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="456.0" layoutY="364.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="456.0" layoutY="186.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="212.0" layoutY="244.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="92.0" layoutY="186.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="153.0" layoutY="186.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="274.0" layoutY="306.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="153.0" layoutY="306.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="396.0" layoutY="306.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="331.0" layoutY="186.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="274.0" layoutY="244.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="29.0" fitWidth="36.0" layoutX="337.0" layoutY="244.0" onMouseClicked="#move" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagA" fitHeight="43.0" fitWidth="43.0" layoutX="60.0" layoutY="25.0" onMouseClicked="#moveA" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagB" fitHeight="43.0" fitWidth="43.0" layoutX="289.0" layoutY="25.0" onMouseClicked="#moveB" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImag2" fitHeight="43.0" fitWidth="43.0" layoutX="517.0" layoutY="25.0" onMouseClicked="#moveC" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagN" fitHeight="43.0" fitWidth="43.0" layoutX="441.0" layoutY="254.0" onMouseClicked="#moveN" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagL" fitHeight="43.0" fitWidth="43.0" layoutX="212.0" layoutY="252.0" onMouseClicked="#moveL" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagI" fitHeight="43.0" fitWidth="43.0" layoutX="367.0" layoutY="179.0" onMouseClicked="#moveI" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagH" fitHeight="43.0" fitWidth="43.0" layoutX="289.0" layoutY="179.0" onMouseClicked="#moveH" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagG" fitHeight="43.0" fitWidth="43.0" layoutX="212.0" layoutY="179.0" onMouseClicked="#moveG" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagF" fitHeight="43.0" fitWidth="43.0" layoutX="441.0" layoutY="102.0" onMouseClicked="#moveF" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagE" fitHeight="43.0" fitWidth="43.0" layoutX="289.0" layoutY="102.0" onMouseClicked="#moveE" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagD" fitHeight="43.0" fitWidth="43.0" layoutX="138.0" layoutY="102.0" onMouseClicked="#moveD" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagV" fitHeight="43.0" fitWidth="43.0" layoutX="60.0" layoutY="482.0" onMouseClicked="#moveV" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagW" fitHeight="43.0" fitWidth="43.0" layoutX="289.0" layoutY="482.0" onMouseClicked="#moveW" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagX" fitHeight="43.0" fitWidth="43.0" layoutX="517.0" layoutY="482.0" onMouseClicked="#moveX" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagO" fitHeight="43.0" fitWidth="43.0" layoutX="517.0" layoutY="254.0" onMouseClicked="#moveO" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagP" fitHeight="43.0" fitWidth="43.0" layoutX="212.0" layoutY="329.0" onMouseClicked="#moveP" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagJ" fitHeight="43.0" fitWidth="43.0" layoutX="60.0" layoutY="254.0" onMouseClicked="#moveJ" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagK" fitHeight="43.0" fitWidth="43.0" layoutX="138.0" layoutY="254.0" onMouseClicked="#moveK" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagT" fitHeight="43.0" fitWidth="43.0" layoutX="289.0" layoutY="405.0" onMouseClicked="#moveT" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagS" fitHeight="43.0" fitWidth="43.0" layoutX="138.0" layoutY="405.0" onMouseClicked="#moveS" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagU" fitHeight="43.0" fitWidth="43.0" layoutX="441.0" layoutY="405.0" onMouseClicked="#moveU" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagM" fitHeight="43.0" fitWidth="43.0" layoutX="367.0" layoutY="254.0" onMouseClicked="#moveM" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagQ" fitHeight="43.0" fitWidth="43.0" layoutX="289.0" layoutY="329.0" onMouseClicked="#moveQ" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="AImagR" fitHeight="43.0" fitWidth="43.0" layoutX="367.0" layoutY="329.0" onMouseClicked="#moveR" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
